--- a/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
@@ -204,6 +204,7 @@
 
 //********************* 我的工具 ******
 "我的工具" = "My tool";
+"互动" = "Interaction";
 "喊话" = "Shout";
 "听听" = "Listen";
 "回家" = "Go home";
