--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -1294,3 +1294,6 @@
 "联系人列表已满" = "联系人列表已满";
 "无数据" = "无数据";
 "请到设置->隐私->定位服务中开启【巴诺手表 APP】定位服务，以便于能够准确获得你的位置信息" = "请到设置->隐私->定位服务中开启【巴诺手表 APP】定位服务，以便于能够准确获得你的位置信息";
+
+"设备正在听听中，请稍后再试" = "设备正在听听中，请稍后再试";
+"设备正在喊话中，请稍后再试" = "设备正在喊话中，请稍后再试";
