--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -1297,3 +1297,6 @@
 
 "设备正在听听中，请稍后再试" = "设备正在听听中，请稍后再试";
 "设备正在喊话中，请稍后再试" = "设备正在喊话中，请稍后再试";
+"定位中…" = "定位中…";
+"添加唤醒时间" = "添加唤醒时间";
+"唤醒时间" = "唤醒时间";
