--- a/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
@@ -1288,5 +1288,8 @@
 "无数据" = "No Data";
 "请到设置->隐私->定位服务中开启【巴诺手表 APP】定位服务，以便于能够准确获得你的位置信息" = "Please go to Settings-> Privacy-> Location Services to enable the [Bano Watch App] location service, so that you can get your location information accurately";
 
-"设备正在听听中，请稍后再试" = "设备正在听听中，请稍后再试";
-"设备正在喊话中，请稍后再试" = "设备正在喊话中，请稍后再试";
+"设备正在听听中，请稍后再试" = "BAANOOL IOT: Device is listening,please try again later";
+"设备正在喊话中，请稍后再试" = "BAANOOL IOT: Device is shouting,please try again later";
+"定位中…" = "Positioning…";
+"添加唤醒时间" = "Add wake time";
+"唤醒时间" = "Wake time";
