--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -1301,4 +1301,5 @@
 "添加唤醒时间" = "添加唤醒时间";
 "唤醒时间" = "唤醒时间";
 "%ld分%ld秒后再试" = "%ld分%ld秒后再试";
-
+"请添加唤醒时间,选取小时和分钟" = "请添加唤醒时间,选取小时和分钟";
+"该手机号码没有注册" = "该手机号码没有注册";
