消息列表添加谷歌地址

--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -1303,3 +1303,5 @@
 "%ld分%ld秒后再试" = "%ld分%ld秒后再试";
 "请添加唤醒时间,选取小时和分钟" = "请添加唤醒时间,选取小时和分钟";
 "该手机号码没有注册" = "该手机号码没有注册";
+"设备\"%@\"，位置在\"%@\"" = "设备\"%@\"，位置在\"%@\"";
+"您已经绑定了这个设备" = "您已经绑定了这个设备";
