--- a/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
@@ -1296,3 +1296,5 @@
 "%ld分%ld秒后再试" = "Try again in %ldminutes %ldseconds";
 "请添加唤醒时间,选取小时和分钟" = "Please click add time, and choose hour and minute.";
 "该手机号码没有注册" = "This account is not registered";
+"设备\"%@\"，位置在\"%@\"" = "Device \"%@\" wakeup, location is \"%@\"";
+"您已经绑定了这个设备" = "You have bind the pets!";
