--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -1305,3 +1305,5 @@
 "该手机号码没有注册" = "该手机号码没有注册";
 "设备\"%@\"，位置在\"%@\"" = "设备\"%@\"，位置在\"%@\"";
 "您已经绑定了这个设备" = "您已经绑定了这个设备";
+"宠物定位" = "宠物定位";
+"暂不解除" = "暂不解除";
