--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -208,7 +208,7 @@
 "喊话" = "喊话";
 "听听" = "听听";
 "回家" = "回家";
-"惩罚" = "惩罚";
+"惩罚" = "训宠";
 "定位" = "定位";
 "微聊" = "微聊";
 "用户管理" = "用户管理";
@@ -223,9 +223,9 @@
 "您暂未设置回家录音指令，" = "您暂未设置回家录音指令，";
 "请前往录音 ..." = "请前往录音 ...";
 "我知道了" = "我知道了";
-"请设置您的惩罚时长" = "请设置您的惩罚时长";
+"请设置您的惩罚时长" = "请设置加强警告时长";
 "取消" = "取消";
-"发起惩罚" = "发起惩罚";
+"发起惩罚" = "加强警告";
 "附近宠物" = "附近宠物";
 "宠友列表" = "宠友列表";
 "宠友消息" = "宠友消息";
