--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -255,10 +255,10 @@
 "电子围栏，当宠物出围栏时app能收到报警并提示主人。注意：开启此功能后会打开设备的GPS，耗电量会增加。" = "电子围栏，当宠物出围栏时app能收到报警并提示主人。注意：开启此功能后会打开设备的GPS，耗电量会增加。";
 "挂失后，只要设备开机就自动发送位置给APP，请耐心等候。" = "挂失后，只要设备开机就自动发送位置给APP，请耐心等候。";
 "挂失" = "挂失";
-"设备状态：未连接" = "设备状态：未连接";
-"设备状态：已连接" = "设备状态：已连接";
-"设备状态：无" = "设备状态：无";
-"设备状态：" = "设备状态：";
+"设备：未连接" = "设备：未连接";
+"设备：已连接" = "设备：已连接";
+"设备：无" = "设备：无";
+"设备：" = "设备：";
 "无" = "无";
 "已连接" = "已连接";
 "未连接" = "未连接";
