--- a/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
@@ -298,7 +298,6 @@
 
 
 "请求超时" = "Request timed out";
-"发送成功" = "Success";
 "重置成功" = "Success";
 "登录成功" = "Success";
 "注册成功" = "Success";
@@ -480,7 +479,6 @@
 "查询话费" = "Inquire";
 "请输入查询内容" = "Please enter the query content";
 "请输入你的查询的电话号码" = "Please enter your phone number for inquiry";
-"发送成功" = "Success";
 "请选择你要删除的短信" = "Please select the SMS you want to delete";
 // 拍照
 "拍照" = "Take a photo";
@@ -1136,7 +1134,7 @@
 "请输入短信内容" = "Please enter the text message content";
 "请输入你的查询的电话号码" = "Please enter the phone number of your enquiry";
 "请输入查询内容" = "Please enter the query content";
-"发送成功" = "Sent successfully";
+"发送成功" = "Send Success";
 "短信查询失败" = "SMS query failed";
 "请选择你要删除的短信" = "Please select the SMS you want to delete.";
 "短信删除失败" = "SMS deletion failed";
@@ -1300,3 +1298,6 @@
 "您已经绑定了这个设备" = "You have bind the pets!";
 "宠物定位" = "Pet location";
 "暂不解除" = "Cancel";
+"密码错误" = "Wrong password";
+"此账号已被注册" = "This account has been registered";
+"验证码错误" = "Verification Code Error";
