--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -299,7 +299,6 @@
 
 
 "请求超时" = "请求超时";
-"发送成功" = "发送成功";
 "重置成功" = "重置成功";
 "登录成功" = "登录成功";
 "注册成功" = "注册成功";
@@ -480,7 +479,6 @@
 "查询话费" = "查询话费";
 "请输入查询内容" = "请输入查询内容";
 "请输入你的查询的电话号码" = "请输入你的查询的电话号码";
-"发送成功" = "发送成功";
 "请选择你要删除的短信" = "请选择你要删除的短信";
 // 拍照
 "拍照" = "拍照";
@@ -1307,3 +1305,6 @@
 "您已经绑定了这个设备" = "您已经绑定了这个设备";
 "宠物定位" = "宠物定位";
 "暂不解除" = "暂不解除";
+"密码错误" = "密码错误";
+"此账号已被注册" = "此账号已被注册";
+"验证码错误" = "验证码错误";
