--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -187,7 +187,6 @@
 "女" = "女";
 "请输入电话号" = "请输入电话号";
 "请输入微信号" = "请输入微信号";
-"请输入邮箱" = "请输入邮箱";
 "请输入WhatsApp" = "请输入WhatsApp";
 "点击公开后，别人可在您的主页看到您的电话" = "点击公开后，别人可在您的主页看到您的电话";
 "点击公开后，别人可在您的主页看到您的微信" = "点击公开后，别人可在您的主页看到您的微信";
@@ -1308,3 +1307,5 @@
 "密码错误" = "密码错误";
 "此账号已被注册" = "此账号已被注册";
 "验证码错误" = "验证码错误";
+"请输入手机号/邮箱" = "请输入手机号/邮箱";
+"用户名不存在" = "用户名不存在";
