--- a/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
@@ -813,7 +813,6 @@
 "请输入密码" = "Please enter your password";
 "请再次输入密码" = "Please enter your password again";
 "请输入电话号码" = "Please enter your phone number";
-"请输入邮箱" = "Enter email";
 "请输入确认密码" = "Please enter a confirmation password";
 "填写信息" = "Fill in the information";
 "两次输入的密码不相同" = "The passwords entered twice are different";
@@ -1301,3 +1300,5 @@
 "密码错误" = "Wrong password";
 "此账号已被注册" = "This account has been registered";
 "验证码错误" = "Verification Code Error";
+"请输入手机号/邮箱" = "Please input phone number/email";
+"用户名不存在" = "User name does not exist";
