车载模块isGoogleMap逻辑修复, 文案修改

--- a/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
@@ -1302,3 +1302,5 @@
 "验证码错误" = "Verification Code Error";
 "请输入手机号/邮箱" = "Please input phone number/email";
 "用户名不存在" = "User name does not exist";
+
+"播放速度" = "Play speed";
