添加英文文案

--- a/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
@@ -175,7 +175,7 @@
 "毛色" = "Hair color";
 "宠龄" = "Age";
 "防疫记录" = "Epidemic Prevention Record";
-"关联设备" = "Associated Device";
+"关联设备" = "Device";
 "解除" = "Remove";
 "温馨提醒！您将解除该APP上的关联设备同时设备相对应的宠物资料也一并删除" = "Warm reminder! You will unlink the device from the APP and delete the pet data corresponding to the device.";
 "绝育 MM" = "Sterilization MM";
@@ -367,7 +367,7 @@
 "进出区域" = "Area";
 "进围栏" = "Into the fence";
 "出围栏" = "Out of the fence";
-"门状态:" = "Door status:";
+"门状态:" = "Door:";
 "当天里程:" = "Mileage of the day:";
 "内电:" = "Internal power:";
 "外电:" = "Foreign Telecom:";
@@ -385,7 +385,7 @@
 "多次定位" = "Continuously track";
 "电子围栏" = "Geo-fence";
 "断油断电" = "Stop engine";//"Oil cut off";
-"停止报警" = "StopAlarm";
+"停止报警" = "Stop alarm";
 "确定停止报警?" = "Are you sure to stop alarm?";
 "话费查询" = "Enquiry fee";
 "输入电话号码" = "Enter phone number";
@@ -697,7 +697,7 @@
 "起始时间" = "Start time";
 "怠速时长" = "Idle time";
 "停留时间" = "Residence time";
-"ACC状态" = "ACC status";
+"ACC状态" = "ACC";
 "油量 (升)" = "Oil quantity (liter)";
 "所有报警" = "All alarms";
 "SOS报警" = "SOS alarm";
@@ -713,13 +713,13 @@
 "发送时间" = "Sending time";
 "开门" = "Open the door";
 "行驶" = "Travel";
-"超速" = "Speeding";
+"超速" = "Speed";
 "疲劳" = "Fatigue";
 "欠压" = "Undervoltage";
 "掉电" = "Power down";
 "振动" = "Vibration";
 "点火" = "Ignition";
-"位移" = "Displacement";
+"位移" = "Move";
 "偷油漏油" = "Stealing oil spill";
 "碰撞" = "Collision";
 "文本" = "Text";
@@ -757,7 +757,7 @@
 "加油:" = "Add oil:";
 "漏油:" = "Oil leak:";
 "地址:" = "address:";
-"报警类型:" = "Alarm type:";
+"报警类型:" = "Alarm:";
 "卫星数量:" = "Number of satellites:";
 "总耗油:" = "Total fuel consumption:";
 "温度:" = "Temperature:";
@@ -792,9 +792,9 @@
 
 
 //********************* 我的 ******
-"设备管理" = "Device Management";
-"分组管理" = "Group management";
-"子账户管理" = "Sub-account management";
+"设备管理" = "Device";
+"分组管理" = "Group";
+"子账户管理" = "Sub-account";
 "报警消息设置" = "Alarm message settings";
 "我的设备" = "My device";
 "添加" = "Add";
@@ -1033,7 +1033,7 @@
 "拒接陌生人-功能列表" = "Refuse";
 "手表挂失-功能列表" = "LostWatch";
 "通讯录" = "Phonebook";
-"编辑" = "EDIT";
+"编辑" = "Edit";
 "管理员" = "Admin";
 "我" = "Me";
 "未知号码" = "Unknow";
@@ -1306,3 +1306,142 @@
 "播放速度" = "Play speed";
 
 "密码登录" = "password login";
+
+//----------2022-12需求新增
+"设备号/车牌号/IMEI" = "Device No/number plate/IMEI";
+"手动添加" = "Add manully";
+"设备IMEI" = "Device IMEI";
+"请输入有效的IMEI(必填)" = "Please input valid IMEI(Required)";
+"输入设备名称(必填)" = "Enter device name(Required)";
+"图标" = "Icon";
+"产品类型" = "product type";
+"请选择" = "Please select";
+"报警消息" = "Alarm Message";
+"设备名称" = "Device name";
+"报警时间" = "Alarm time";
+"操作" = "Operate";
+"疲劳驾驶" = "Fatigue driving";
+//"GNSS发生故障" = "";
+//"GNSS天线被剪或未接" = "";
+"轮动报警" = "Wheel";
+"外电断电报警" = "PowerDown";
+//"区域超速报警" = "";
+//"摄像头故障" = "";
+"震动报警" = "Shock";
+//"疲劳驾驶报警" = "";
+"非法移位报警" = "Move";
+"非法点火报警" = "Acc";
+"非法开门报警" = "OpenDoor";
+//"当天累计驾驶超时报警" = "";
+"偷油/漏油报警" = "OliAlarm";
+//"温度异常报警" = "";
+"碰撞报警" = "Collision";
+//"侧翻报警" = "";
+
+"全部已读" = "Mark all as read";
+"查看所有报警" = "View all alarms";
+"保存" = "Save";
+"请输入昵称" = "Please enter a nickname";
+"确定" = "Confirm";
+"取消" = "Cancel";
+"参数不能为空" = "Parameter cannot be empty";
+"设备号不存在或者重复绑定" = "Device dose not exist or bound repeatedly";
+"状态:"= "Status:";
+"经纬度:"= "Lng Lat:";
+"设备:" = "Device:";
+"电量:" = "Bat:";
+"油量:" = "Oil:";
+"休眠模式:" = "Sleep:";
+"强" = "Strong";
+"弱" = "Weak";
+"上报策略:"= "Report policy:";
+"未启用" = "Unuse";
+"跟踪" = "Track";
+"近七天" = "Nearly 7 days";
+"请设置回放时间段" = "please set play back time";
+"开始时间" = "Start time";
+"结束时间" = "End time";
+"进" = "In";
+"出" = "Out";
+"进围栏报警" = "Fence entry alarm";
+"出围栏报警" = "Fence out alarm";
+"时段1报警" = "Period 1 alarm";
+"时段2报警" = "Period 2 alarm";
+"操作成功" = "Operation Success";
+"权限" = "permission";
+"添加" = "Add";
+"分配的设备" = "assigned equipment";
+"创建时间" = "creation time";
+"权限查看" = "Setting permissions";
+"请输入备注" = "Please enter a note";
+"请输入详细地址" = "Please input full address";
+"确认删除?\n删除后不可找回" = "Confirm to delete?\nit cannot be retrieved after deletion";
+"设备信息" = "Device details";
+"控制指令" = "Control instruction";
+"指令记录" = "Instruction record";
+"安装信息" = "Installation Information";
+"解绑设备" = "Unbind the device";
+"永久" = "Permanent";
+"休眠定位策略" = "Sleep tracking strategy";
+"断油电" = "Stop engine";
+"定位策略" = "Position";
+"静止时的时间间隔" = "Time when still";
+"运动时的时间间隔" = "Time when motion";
+"运动时的距离间隔" = "Distance when motion";
+"听听模式" = "listen mode";
+"定位模式" = "Tracker mode";
+"是否对设备确定恢复油电？" = "Whether to determine whether to restore the oil and power of the equipment?";
+"锁电机" = "Lock motor";
+"解锁" = "unlock";
+"上锁" = "locked";
+"远程控制" = "Remote control";
+"远程点火" = "Remote ignition";
+"远程熄火" = "Remote flameout";
+"时区" = "time zone";
+"输入6位短信密码" = "Enter 6-digit SMS password";
+"设置油量校准" = "Oil calibration";
+"零值校准" = "Zero";
+"满值校准" = "Full";
+"指令" = "Instructions";
+"发送中" = "sending";
+"发送成功" = "Send Success";
+"发送失败" = "Send Fail";
+"上报策略" = "Position strategy";
+"回拨电话" = "Call back";
+"移位报警" = "Move";
+"请求OBD" = "OBD Msg";
+"恢复出厂设置" = "Restore factory settings";
+"设置油箱容积" = "Set the tank volume(L)";
+"里程初始值" = "Enter initial mileage(M)";
+"ACC工作通知" = "Acc notify";
+"GPS漂移抑制" = "Suppress";
+"转弯补传角度" = "Set the turning angle(<180°)";
+"报警短信设置次数" = "Set the send times of alarm";
+"震动等级" = "Sensitivity";
+"编辑设备网络参数" = "Main server";
+"电子围栏-多边形" = "Geo-fence";
+"电子围栏-圆形" = "Geo-fence";
+"电子围栏-矩形" = "Geo-fence";
+"删除电子围栏" = "Fence Delete";
+"安装人" = "Installer";
+"安装公司"= "Installation Company";
+"安装时间"= "Installation time";
+"安装地点"= "Installation Location";
+"司机名称"= "driver name";
+"手机号码"= "cellphone number";
+"VIN码"= "VIN code";
+"发动机编"= "engine number";
+"车辆品牌"= "Vehicle Brands";
+"安装图片"= "Installation picture";
+"请输入" = "Please enter";
+"请输入安装人" = "Please enter Installer";
+"请输入安装公司" = "Please enter Installation Company";
+"请输入安装地点" = "Please enter Installation Location";
+"请输入司机名称" = "Please enter driver name";
+"请输入手机号码" = "Please enter cellphone number";
+"请输入VIN码" = "Please enter VIN code";
+"请输入发动机编号" = "Please enter engine number";
+"请输入车辆品牌" = "Please enter Vehicle Brands";
+"确认删除?" = "confirm deletion?";
+"添加组" = "Add group";
+
