子账户, 权限和状态字段展示

--- a/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
@@ -1445,3 +1445,9 @@
 "确认删除?" = "confirm deletion?";
 "添加组" = "Add group";
 
+"所有权限" = "All permissions";
+"查看权限" = "Check permissions";
+"控制权限" = "Control permissions";
+
+"正常" = "Normal";
+"冻结" = "Freeze";
