bugfix: 子账户管理修复文案, 线条

--- a/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
@@ -1372,7 +1372,7 @@
 "添加" = "Add";
 "分配的设备" = "assigned equipment";
 "创建时间" = "creation time";
-"权限查看" = "Setting permissions";
+"设置权限" = "Setting permissions";
 "请输入备注" = "Please enter a note";
 "请输入详细地址" = "Please input full address";
 "确认删除?\n删除后不可找回" = "Confirm to delete?\nit cannot be retrieved after deletion";
