--- a/cobanBnPetSwift/Ohter/es.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/es.lproj/Localizable.strings
@@ -1373,7 +1373,6 @@
 "添加" = "Add";
 "分配的设备" = "assigned equipment";
 "创建时间" = "creation time";
-"设置权限" = "Setting permissions"; //TODO
 "请输入备注" = "Please enter a note";
 "请输入详细地址" = "Please input full address";
 "确认删除?\n删除后不可找回" = "Confirm to delete?\nit cannot be retrieved after deletion";
@@ -1452,3 +1451,4 @@
 
 "正常" = "Normal";
 "冻结" = "Freeze";
+"设置权限" = "Setting permissions";
