--- a/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/en.lproj/Localizable.strings
@@ -1499,3 +1499,5 @@
 "imei号已经被绑定，解绑后再试" = "imei number has been bound";
 "imei号不存在" = "imei number does not exist";
 "设置权限" = "Setting permissions";
+"号码类型" = "Number type";
+"输入手机号码(必填)" = "Enter  phone number (required)";
