--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -1315,3 +1315,9 @@
 "密码登录" = "密码登录";
 
 "设备号/车牌号/IMEI" = "设备号/车牌号/IMEI";
+
+
+"收到报警图片" = "收到报警图片";
+"设备触发报警" = "设备触发报警";
+"收到图片" = "收到图片";
+"通知声音" = "通知声音";
