--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -1321,3 +1321,7 @@
 "设备触发报警" = "设备触发报警";
 "收到图片" = "收到图片";
 "通知声音" = "通知声音";
+"还没有绑定wifi摄像头" = "还没有绑定wifi摄像头";
+"照片正在上传中" = "照片正在上传中";
+"下限" = "下限";
+"上限" = "上限";
