--- a/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/zh-Hans.lproj/Localizable.strings
@@ -1325,3 +1325,10 @@
 "照片正在上传中" = "照片正在上传中";
 "下限" = "下限";
 "上限" = "上限";
+"实时视频" = "实时视频";
+"拍照" = "拍照";
+"wifi热点" = "wifi热点";
+"拆除报警开关" = "拆除报警开关";
+"温度报警开关" = "温度报警开关";
+"查看" = "查看";
+"绑定成功" = "绑定成功";
