--- a/cobanBnPetSwift/Ohter/es.lproj/InfoPlist.strings
+++ b/cobanBnPetSwift/Ohter/es.lproj/InfoPlist.strings
@@ -1,4 +1,4 @@
-/* 
+/*
   InfoPlist.strings
   cobanBnPetSwift
 
@@ -6,9 +6,9 @@
   Copyright © 2020 coban. All rights reserved.
 */
 CFBundleDisplayName = "BAANOOL IOT";
-"NSMicrophoneUsageDescription" = "App needs your consent to access the microphone recording to send voice";
-"NSPhotoLibraryUsageDescription" = "App requires your consent in order to scan the QR code to bind the device";
-"NSPhotoLibraryAddUsageDescription" = "App requires your consent in order to scan the QR code to bind the device";
-"NSLocationAlwaysUsageDescription" = "App needs your consent to access the geographic location information to obtain the location information of the device";
-"NSLocationWhenInUseUsageDescription" = "App needs your consent to access the geographic location information to obtain the location information of the device";
-"NSCameraUsageDescription"= "The app needs your consent to scan the QR code and bind the device";
+"NSMicrophoneUsageDescription" = "La aplicación necesita consentimiento para acceder a las grabaciones del micrófono para enviar voz";
+"NSPhotoLibraryUsageDescription" = "La aplicación necesita su consentimiento para escanear el código QR para vincular el dispositivo";
+"NSPhotoLibraryAddUsageDescription" = "La aplicación necesita su consentimiento para escanear el código QR para vincular el dispositivo";
+"NSLocationAlwaysUsageDescription" = "La aplicación necesita su consentimiento para acceder a la información de ubicación geográfica para obtener la información de ubicación del dispositivo";
+"NSLocationWhenInUseUsageDescription" = "La aplicación necesita su consentimiento para acceder a la información de ubicación geográfica para obtener la información de ubicación del dispositivo";
+"NSCameraUsageDescription"= "La aplicación necesita su consentimiento para escanear el código QR para vincular el dispositivo";
