--- a/cobanBnPetSwift/Ohter/ar.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/ar.lproj/Localizable.strings
@@ -1526,7 +1526,7 @@
 "当前休眠模式不支持限距定时汇报" ="لا يدعم وضع السكون هذا إعداد التقارير محدودة الوقت";
 "当前休眠模式静止时的时间间距需要大于10分钟" ="الفاصل الزمني عندما تكون السكون أكبر من 10 دقائق";
 
-"湿度" = "رطوبة";
+"湿度:" = "رطوبة:";
 "摄像机重命名" = "إعادة تسمية الكاميرا";
 "删除摄像机" = "حذف الكاميرا";
 "摄像机列表" = "قائمة الكاميرا";
