--- a/cobanBnPetSwift/Ohter/ar.lproj/Localizable.strings
+++ b/cobanBnPetSwift/Ohter/ar.lproj/Localizable.strings
@@ -1532,3 +1532,8 @@
 "摄像机列表" = "قائمة الكاميرا";
 "温度报警" = "إنذار درجة الحرارة";
 "确定删除?" = "تأكيد الحذف؟";
+
+"移位取消" = "إلغاء الحركة";
+"截图成功" = "لقطة شاشة ناجحة";
+"请按一下wifi摄像机的reset按键，等待大约35秒后将摄像头对准二维码，摄像机将自动绑定" ="يرجى الضغط على زر إعادة تعيين كاميرا wifi ، وانتظر حوالي 35 ثانية ووجه الكاميرا إلى رمز الاستجابة السريعة ، وستكون الكاميرا مرتبطة تلقائيًا";
+"此摄像头未连接" = "هذه الكاميرا غير متصلة";
